updated homepage header

--- a/mark3/templates/home.html
+++ b/mark3/templates/home.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>Login Authentication System in Flask</h1>
+  <h1>Gaming Backlog AI Lite</h1>
   <a class="btn login_btn" href="{{url_for('login')}}">Login</a><br>
   <a class="btn register_btn" href="{{url_for('register')}}">Register</a><br>
 </body>
