3rd version of basic scheduler math logic

--- a/mark3/templates/chat.html
+++ b/mark3/templates/chat.html
@@ -20,7 +20,7 @@
     <label for="time_available">Total Time Available This Week (e.g., 26 hours):</label><br>
     <input type="text" id="time_available" name="time_available" required><br><br>
   
-    <label for="time_range">Time Ranges Per Day (e.g., 8PM-10PM on M/W/F, 10AM-12AM on Sat/Sun):</label><br>
+    <label for="time_im_free">Time Where I'm Free Each Day (e.g., 8PM-10PM on M/W/F, 10AM-12AM on Sat/Sun):</label><br>
     <textarea id="time_range" name="time_range" rows="3" required></textarea><br><br>
   
     <label for="schedule_preference">Schedule Preference (e.g., Weekly, or list days):</label><br>
